# foodgram-project-react

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: filters.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
backend/api/management/commands/: loading_ingredients.py
backend/foodgram/: pyproject.toml  settings.py  urls.py
backend/foodgram/tests/: test_foodgram.py
backend/recipe/: admin.py  models.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/utils/: to_pdf.py
infra/: docker-compose.yml  nginx.conf
