[tool.poetry]
name = "foodgram-project-react"
version = "0.1.0"
description = ""
authors = ["Ilya Moiseev <ilya.moiseev95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
